--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -1,25 +1,15 @@
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/hotplace?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/hotplace?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=1234
 
-#???? sql? ???
 spring.jpa.properties.hibernate.show_sql=true
-
-#sql ??? ?? ???
 spring.jpa.properties.hibernate.format_sql=true
 
-#db ??? ??. ?? ??? ?? ? ??
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.show-sql=true
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/DEV
-#spring.datasource.username=root
-#spring.datasource.password=password
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
 
