--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -15,3 +15,5 @@ server.servlet.session.timeout=90m
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+#logging.level.org.springframework.security=DEBUG
