feat: DeleteMapping으로 삭제 기능 수정 및 PutMapping으로 수정 기능 업데이트

--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -16,4 +16,7 @@ server.servlet.session.timeout=90m
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
+spring.mvc.hiddenmethod.filter.enable=true
+
+
 #logging.level.org.springframework.security=DEBUG
